# tokymon

./: .gitignore  CHANGELOG_TODAY.md  FACE_DETECTION_IMPLEMENTATION.md  FACE_DETECTION_TUNING.md  FACE_IMAGES_INFO.md  FINAL_WATCHDOG_FIX.md  INSTALL_OPENCV_PI.md  LICENSE  MP4_FACE_EVALUATION.md  PROJECT_SUMMARY.md  QUICK_START_SESSIONS.md  README.md  RUN_BASIC_COMMANDS_PI.md  RUN_ON_MAC.md  SESSION_DEPLOYMENT.md  TEST_BASIC_COMMANDS.md  WATCHDOG_AND_CAMERA_FIX.md  WATCHDOG_FIXES_V2.md  WATCHDOG_FIX_ANALYSIS.md  conftest.py  main.py  main_session.py  pyproject.toml  requirements.txt  run_session_mac.sh  setup_mac.sh  test_basic_commands.sh
.merge_notes/: README.md.from_nested
Wificonfig/: wpa_supplicant.conf
brain/: intent_parser.py  llm_gateway.py  policy_engine.py  state_manager.py
configs/: env.dev.yaml  env.prod.yaml  pinmap_pi.yaml  services.yaml  tokymon-face.service
control/: actuators.py  motors.py  motors.py.bak.20251204_064330  motors.py.bak.20251204_114148  motors.py.bak.20251204_114508  pwm_helpers.py  safety.py
display/: expressions.py  max7219_driver.py
drivers/: rpi_gpio.py  safe_gpio.py  sysfs_gpio.py
examples/: demo_read_sensors.py  demo_speech_move.py  full_hw_test.py  full_hw_test.py.bak.20251204_095135  hw_test.py  hw_test_helpers.py  session_example.py  test_basic_commands.py
prompts/: intent_to_action.tpl  system_prompt.txt
raw_scripts/: ir_detect_5s_led.py  tb6612_Fix.py  toky_voice.py  tokymon_dual_control.py  tokymon_max7219_faces_round_eyes_central.py  ultrasonic_test.py
scripts/: deploy_to_pi.sh  full_hw_test_run.sh  (+11 more)
(+63 files in other folders)
